// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`roundtrip: Mermaid ダイアグラム > snapshot: classDiagram（クラス図） 1`] = `
{
  "content": [
    {
      "attrs": {
        "code": "classDiagram
  class Animal {
    +String name
    +makeSound()
  }
  class Dog {
    +fetch()
  }
  Animal <|-- Dog",
      },
      "type": "mermaidBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: Mermaid ダイアグラム > snapshot: erDiagram（ER図） 1`] = `
{
  "content": [
    {
      "attrs": {
        "code": "erDiagram
  CUSTOMER ||--o{ ORDER : places
  ORDER ||--|{ LINE-ITEM : contains",
      },
      "type": "mermaidBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: Mermaid ダイアグラム > snapshot: flowchart LR（左→右向き） 1`] = `
{
  "content": [
    {
      "attrs": {
        "code": "graph LR
  A[開始] --> B{条件}
  B -->|Yes| C[処理]
  B -->|No| D[終了]",
      },
      "type": "mermaidBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: Mermaid ダイアグラム > snapshot: flowchart TD（既存の基本ケース） 1`] = `
{
  "content": [
    {
      "attrs": {
        "code": "graph TD;
  A-->B;",
      },
      "type": "mermaidBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: Mermaid ダイアグラム > snapshot: gantt（ガントチャート） 1`] = `
{
  "content": [
    {
      "attrs": {
        "code": "gantt
  title プロジェクト計画
  dateFormat YYYY-MM-DD
  section フェーズ1
  設計 :a1, 2024-01-01, 7d
  実装 :after a1, 14d",
      },
      "type": "mermaidBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: Mermaid ダイアグラム > snapshot: pie chart（円グラフ） 1`] = `
{
  "content": [
    {
      "attrs": {
        "code": "pie title 割合
  "A" : 40
  "B" : 35
  "C" : 25",
      },
      "type": "mermaidBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: Mermaid ダイアグラム > snapshot: sequenceDiagram（シーケンス図） 1`] = `
{
  "content": [
    {
      "attrs": {
        "code": "sequenceDiagram
  Alice->>Bob: Hello
  Bob-->>Alice: Hi!
  Alice->>Bob: How are you?",
      },
      "type": "mermaidBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: Mermaid ダイアグラム > snapshot: stateDiagram-v2（状態遷移図） 1`] = `
{
  "content": [
    {
      "attrs": {
        "code": "stateDiagram-v2
  [*] --> Idle
  Idle --> Processing : start
  Processing --> Done : finish
  Done --> [*]",
      },
      "type": "mermaidBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: Mermaid ダイアグラム > snapshot: 空の mermaid ブロック 1`] = `
{
  "content": [
    {
      "attrs": {
        "code": "",
      },
      "type": "mermaidBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: Mermaid ダイアグラム > snapshot: 複数の Mermaid ブロックが文書内に混在する 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 1,
      },
      "content": [
        {
          "text": "設計書",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "code": "graph TD
  A --> B",
      },
      "type": "mermaidBlock",
    },
    {
      "content": [
        {
          "text": "中間のテキスト。",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "code": "sequenceDiagram
  Alice->>Bob: Ping",
      },
      "type": "mermaidBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: code blocks > snapshot: code block with language 1`] = `
{
  "content": [
    {
      "attrs": {
        "language": "typescript",
      },
      "content": [
        {
          "text": "const x = 1;",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: code blocks > snapshot: code block with multiple lines 1`] = `
{
  "content": [
    {
      "attrs": {
        "language": "js",
      },
      "content": [
        {
          "text": "function hello() {
  return "world";
}",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: code blocks > snapshot: code block without language 1`] = `
{
  "content": [
    {
      "attrs": {
        "language": null,
      },
      "content": [
        {
          "text": "plain code",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: code blocks > snapshot: mermaid code block 1`] = `
{
  "content": [
    {
      "attrs": {
        "code": "graph TD;
  A-->B;",
      },
      "type": "mermaidBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: composite documents > snapshot: blockquote + paragraph 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "text": "quoted text",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
    {
      "content": [
        {
          "text": "Normal paragraph",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: composite documents > snapshot: full document 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 1,
      },
      "content": [
        {
          "text": "Document Title",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "An introductory paragraph with ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "italic",
            },
          ],
          "text": "emphasis",
          "type": "text",
        },
        {
          "text": " and ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "strong",
          "type": "text",
        },
        {
          "text": " text.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Section One",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "text": "bullet ",
                  "type": "text",
                },
                {
                  "marks": [
                    {
                      "type": "bold",
                    },
                  ],
                  "text": "one",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "content": [
                {
                  "text": "bullet two",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "Subsection",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "text": "ordered item",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "content": [
                {
                  "text": "another item",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
    {
      "attrs": {
        "language": "python",
      },
      "content": [
        {
          "text": "print("hello")",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Col A",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Col B",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        {
          "content": [
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "x",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "y",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    {
      "type": "horizontalRule",
    },
    {
      "content": [
        {
          "content": [
            {
              "text": "A final quote",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: composite documents > snapshot: heading + code block + paragraph 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Code Example",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "language": "js",
      },
      "content": [
        {
          "text": "const x = 1;",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
    {
      "content": [
        {
          "text": "That was the code.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: composite documents > snapshot: heading + paragraph + list 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 1,
      },
      "content": [
        {
          "text": "Title",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "A paragraph with ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "bold",
          "type": "text",
        },
        {
          "text": " text.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "text": "item 1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "content": [
                {
                  "text": "item 2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: composite documents > snapshot: heading + table + list 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 1,
      },
      "content": [
        {
          "text": "Data",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Key",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Value",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        {
          "content": [
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "a",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "1",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "text": "note 1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "content": [
                {
                  "text": "note 2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: composite documents > snapshot: horizontal rule between sections 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 1,
      },
      "content": [
        {
          "text": "Section 1",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "type": "horizontalRule",
    },
    {
      "attrs": {
        "level": 1,
      },
      "content": [
        {
          "text": "Section 2",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: headings > snapshot: H1 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 1,
      },
      "content": [
        {
          "text": "Heading 1",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: headings > snapshot: H2 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Heading 2",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: headings > snapshot: H3 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "Heading 3",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: headings > snapshot: H4 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 4,
      },
      "content": [
        {
          "text": "Heading 4",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: headings > snapshot: H5 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 5,
      },
      "content": [
        {
          "text": "Heading 5",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: headings > snapshot: H6 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 6,
      },
      "content": [
        {
          "text": "Heading 6",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: headings > snapshot: heading with inline marks 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Bold",
          "type": "text",
        },
        {
          "text": " and ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "italic",
            },
          ],
          "text": "italic",
          "type": "text",
        },
        {
          "text": " heading",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: headings > snapshot: multiple headings 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 1,
      },
      "content": [
        {
          "text": "Title",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Section",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "Subsection",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: inline markup > snapshot: bold + italic 1`] = `
{
  "content": [
    {
      "content": [
        {
          "marks": [
            {
              "type": "italic",
            },
            {
              "type": "bold",
            },
          ],
          "text": "bold italic",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: inline markup > snapshot: bold 1`] = `
{
  "content": [
    {
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "bold text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: inline markup > snapshot: image 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "alt": "alt text",
            "src": "https://example.com/img.png",
            "title": null,
          },
          "type": "image",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: inline markup > snapshot: inline code 1`] = `
{
  "content": [
    {
      "content": [
        {
          "text": "use ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "code",
            },
          ],
          "text": "console.log",
          "type": "text",
        },
        {
          "text": " here",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: inline markup > snapshot: italic 1`] = `
{
  "content": [
    {
      "content": [
        {
          "marks": [
            {
              "type": "italic",
            },
          ],
          "text": "italic text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: inline markup > snapshot: link 1`] = `
{
  "content": [
    {
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "href": "https://example.com",
                "rel": null,
                "target": null,
              },
              "type": "link",
            },
          ],
          "text": "click here",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: inline markup > snapshot: mixed inline 1`] = `
{
  "content": [
    {
      "content": [
        {
          "text": "Normal ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "bold",
          "type": "text",
        },
        {
          "text": " and ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "italic",
            },
          ],
          "text": "italic",
          "type": "text",
        },
        {
          "text": " and ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "code",
            },
          ],
          "text": "code",
          "type": "text",
        },
        {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: inline markup > snapshot: strikethrough 1`] = `
{
  "content": [
    {
      "content": [
        {
          "marks": [
            {
              "type": "strike",
            },
          ],
          "text": "deleted text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: lists > snapshot: bullet list 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "text": "item 1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "content": [
                {
                  "text": "item 2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "content": [
                {
                  "text": "item 3",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: lists > snapshot: deeply nested list 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "text": "level 1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "content": [
                        {
                          "text": "level 2",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "content": [
                        {
                          "content": [
                            {
                              "content": [
                                {
                                  "text": "level 3",
                                  "type": "text",
                                },
                              ],
                              "type": "paragraph",
                            },
                          ],
                          "type": "listItem",
                        },
                      ],
                      "type": "bulletList",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: lists > snapshot: nested bullet list 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "text": "parent",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "content": [
                        {
                          "text": "child 1",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "content": [
                    {
                      "content": [
                        {
                          "text": "child 2",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: lists > snapshot: nested ordered in bullet 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "text": "parent",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "content": [
                        {
                          "text": "child 1",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                {
                  "content": [
                    {
                      "content": [
                        {
                          "text": "child 2",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "orderedList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: lists > snapshot: ordered list 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "text": "first",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "content": [
                {
                  "text": "second",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "content": [
                {
                  "text": "third",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: lists > snapshot: task list 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "checked": false,
          },
          "content": [
            {
              "content": [
                {
                  "text": "todo",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "taskItem",
        },
        {
          "attrs": {
            "checked": true,
          },
          "content": [
            {
              "content": [
                {
                  "text": "done",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "taskItem",
        },
      ],
      "type": "taskList",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: tables > snapshot: aligned table (left, center, right) 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
                "style": "text-align: left",
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Left",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
                "style": "text-align: center",
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Center",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
                "style": "text-align: right",
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Right",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        {
          "content": [
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
                "style": "text-align: left",
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "a",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
                "style": "text-align: center",
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "b",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
                "style": "text-align: right",
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "c",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: tables > snapshot: multi-row table 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "A",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "B",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "C",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        {
          "content": [
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "1",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "2",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "3",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        {
          "content": [
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "4",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "5",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "6",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: tables > snapshot: simple table 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Name",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Age",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        {
          "content": [
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Alice",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "30",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`roundtrip: tables > snapshot: table with inline marks 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "text": "Header",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        {
          "content": [
            {
              "attrs": {
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "content": [
                    {
                      "marks": [
                        {
                          "type": "bold",
                        },
                      ],
                      "text": "bold",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;
